Final Fixed Grid and working on Mobile Version

--- a/root/NewPortfolio.css
+++ b/root/NewPortfolio.css
@@ -3,8 +3,67 @@
     padding: 0;
     box-sizing: content-box;
   }
+  /* RETINA DISPLAY */
+  @media only screen and (min--moz-device-pixel-ratio: 2),
+  only screen and (-o-min-device-pixel-ratio: 2/1),
+  only screen and (-webkit-min-device-pixel-ratio: 2),
+  only screen and (min-device-pixel-ratio: 2){
+
+
+/* PORTFOLIO LINKS */
+  .grid-container{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding-top: 4rem;
+    
+
+    margin: 0 auto;
+    padding: 5rem 0rem 3rem 0rem;
+    gap: 1rem;
+    justify-content: space-evenly;
+  }
+
+  .grid-container a{
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-content: center;
+    text-decoration: none;
+  }
+
+  .grid-container h2{
+    
+    z-index: 10;
+    visibility: hidden;
+  }
+
+  
+
+  .grid-container div{
+
+  }
+
+  .grid-container img{
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    width: 20rem;
+    height: 20rem;
+  }
+
+}
+/* SECTION ENDS */
+
+
+
+
+
+
 /* LARGE SCREENS */
 /* PORTFOLIO GRID, TEXT, AND LINK */
+@media screen and (min-width:100rem){
+  .active{
   .grid-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -15,8 +74,8 @@
     "d e e f"
     "g h i f";
     list-style: none;
+    margin: 10rem;
     padding: 2rem 3rem 0rem 3rem;
-    
     justify-content: center;
   }
 
@@ -54,27 +113,16 @@
     display: flex;
     font-size: 5rem;
     text-align: center;
-    justify-self: stretch;
     border: 1px solid rgba(0, 0, 0, 0.8);
+    
   }
 
  
 
   .grid-item img{
     background-color: rgba(255, 255, 255, 0.8);
-    
+    object-fit: cover;
   }
-
-  #long{
-    grid-area: auto / auto / auto / auto;
-  }
-
-  
-
-
-  
-
-
 
   /* H2 Image Text*/
 .grid-container h2{
@@ -94,7 +142,7 @@
 
 /* LINK BOX SIZE */
   .grid-container div{
-
+    
   }
 
   .grid-container{
@@ -140,16 +188,14 @@
 /* SECTION END */
 
 /* LINK IMAGE AND BACKGROUND IMAGES */
-    #long img{
-      width: 45.3rem;
-    }
+ 
     img{
-    width: 25.5rem;
+    width: 100%;
     height: 100%;
   }
 
   .grid-container img{
-    object-fit: scale-down;
+    
     position: relative;
     z-index: 1;
     
@@ -165,71 +211,8 @@
     z-index: 1;
   } 
 */
+  }
+}
 
 /* SECTION END */
 
-/* RETINA DISPLAY */
-@media only screen and (min--moz-device-pixel-ratio: 2),
-only screen and (-o-min-device-pixel-ratio: 2/1),
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (min-device-pixel-ratio: 2){
-  nav{
-    width:100%;
-    position: absolute;
-  }
-  
-
-  .icon{
-    display:block;
-  }
-
-  .horizontal {
-    display:none;
-    padding:0;
-    
-  }
-
-
-  .horizontal.vertical{
-    position: absolute;
-    right:0;
-    top:3.75rem;
-    display:flex;
-    flex-direction: column;
-
-    z-index: 2;
-  }
-
-  .horizontal.vertical a{
-    border: 2px;
-    border-style: ridge;
-    padding: 1.5rem 1rem;
-    margin: 0 auto;
-  }
-
-  .active{
-    float: none;
-    text-decoration: none;
-    display:block;
-    margin: 0rem .5rem .5rem .5rem;
-  }
-
-/* PORTFOLIO LINKS */
-  .grid-container{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    
-    padding-top: 4rem;
-    margin: 0 auto;
-    gap: 1rem;
-    justify-content: space-evenly;
-  }
-
-  .grid-container div{
-    width: 20rem;
-    height: 15rem;
-  }
-
-
-}
-/* SECTION ENDS */
