--- a/root/nav.css
+++ b/root/nav.css
@@ -52,7 +52,7 @@ nav a{
   
   /* Modifies the Navbar for medium to large screens */
   .horizontal {
-    background-color: rgb(189, 189, 189);
+    background-color: rgb(196, 206, 241);
     display:flex;
     flex-direction: row;
     justify-content: right;
@@ -95,7 +95,7 @@ nav a{
   
   
   .navbar{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(196, 206, 241);
     
   }
   
@@ -154,6 +154,10 @@ footer a:hover{
 footer a:active{
   color:rgb(0, 0, 0);
 
+}
+
+.center{
+  text-align: center;
 }
 
 /* SECTION ENDS */
